plugins {
    id 'java'
    id 'idea'
    id 'application'
    id "com.github.johnrengelman.shadow" version "5.0.0"
}

group 'com.silaev'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

application {
    mainClassName = 'com.silaev.packer.Packer'
}

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

wrapper{
    gradleVersion = '5.1'
    distributionType = Wrapper.DistributionType.BIN
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    testCompile('org.junit.jupiter:junit-jupiter-params:5.3.1')

    compileOnly 'org.projectlombok:lombok:1.18.4'
    annotationProcessor 'org.projectlombok:lombok:1.18.4'
}
